--- a/templates/cart.html
+++ b/templates/cart.html
@@ -1,47 +1,33 @@
-
 {% extends 'base.html' %}
 
 {% block body %}
 
-    <table class="table table-striped">
-        <thead>
+<table class="table table-striped">
+    <thead>
         <tr>
             <th>Melon Name</th>
             <th>Quantity</th>
             <th>Price</th>
             <th>Total</th>
         </tr>
-        </thead>
-        <tbody>
+    </thead>
+    <tbody>
+        {% for item in cart %}
         <tr>
-            <td>Ancient Watermelon</td>
-            <td>5</td>
-            <td>$3.00</td>
-            <td>$15.00</td>
+            <td>{{ melon_types[item].common_name }}</td>
+            <td>{{ cart[item] }}</td>
+            <td>{{ melon_types[item].price | currencyFormat }}</td>
+            <td>{{ (melon_types[item].price * cart[item]) | currencyFormat }}</td>
         </tr>
-        <tr>
-            <td>Charleston Gray</td>
-            <td>2</td>
-            <td>$2.00</td>
-            <td>$4.00</td>
-        </tr>
-        <tr>
-            <td>Crenshaw</td>
-            <td>1</td>
-            <td>$2.00</td>
-            <td>$2.00</td>
-        </tr>
-        <tr>
-            <td>Ledmon Watermelon</td>
-            <td>2</td>
-            <td>$3.00</td>
-            <td>$6.00</td>
-        </tr>
-        </tbody>
-    </table>
+        {% endfor %}
+    </tbody>
+</table>
 
-    <h3>Total: $27.00</h3>
+<h3>Total:
 
-    <a href="/checkout" class="btn btn-large btn-primary">Check Out</a>
+    <!-- Sum all using format of last td -->
+    $27.00</h3>
+
+<a href="/checkout" class="btn btn-large btn-primary">Check Out</a>
 
 {% endblock %}
